--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,10 +2,26 @@
   display: flex;
   justify-content:center;
   align-items:center;
+  flex-direction:column
+}
+.inputField{
+  margin-top: 100px;
+  padding: 20px;
+  width:450px;
+  background-color:rgba(233, 230, 230, 0.5);
+  outline: none;
+  border: none;
+  /* box-shadow: 0 5px 10px 2px rgba(0, 0, 0, 0.5); */
+  font-size: x-large;
+
+
+
+
+
 }
 .btn{
   
-  margin: 100px;
+  margin: 50px;
   padding:20px;
   font-size:x-large;
   width: 500px;
